# Blinkey_pp

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  PrintVariables.cmake  README.md  gcc-toolchain.cmake  msp430-gdbproxy-help.txt  toolchain.cmake
source/: main.cpp
